# fauna

./: .gitignore  README.md  actions_ak.csv  pyproject.toml  regen_actions.sh
action_recognition/: dataset.py  inference.py  model.py  pipeline.py  train.py  utils.py
app/: README.md  _spec.md  clipsearch.py  server.py  streams.json
app/static/: index.html
clip/scripts/: extract_clip_feats.py
data/out_final/AABCQPTK/: actor_0_clip.npy  actor_1_actions.npy  decision.npz  yolo.npz
iphoneStream/: .gitignore  live_infer.py  requirements.txt  server.py  virtual_phone.py  yolo_worker.py
iphoneStream/templates/: live.html  phone.html  viewer.html
queries/: additional queries.txt  new structure.txt
yolo/scripts/: predict_pose_animals_old.py  predict_pose_final.py  train_pose_animal_kingdom.py
yolo/scripts/yamls/: data.yaml
