[project]
name = "fauna"
version = "0.1.0"
description = "Species-agnostic behavioral sensing for animal health — CV pipeline (YOLO pose + CLIP + action Transformer)"
requires-python = ">=3.12"
dependencies = [
    # ── action_recognition (the Transformer) ──
    "torch>=2.2",
    "numpy>=1.26",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "tensorboard>=2.15",
    # ── clip feature extraction (OpenAI CLIP, via git) ──
    "clip",
    "ftfy",
    "regex",
    "tqdm",
    "pillow",
    "opencv-python>=4.8",
    "torchvision>=0.17",
    # ── yolo pose ──
    "ultralytics>=8.2",
    "lap>=0.5.12",
]

[tool.uv]
# This repo is a collection of scripts, not an installable package —
# `uv sync` installs only the dependencies above into .venv, nothing else.
package = false

[tool.uv.sources]
# The code does `import clip` (OpenAI CLIP, exposes clip.load / encode_image),
# which is NOT the same as the PyPI package named "clip". Pull it from source.
clip = { git = "https://github.com/openai/CLIP.git" }
